fix #304, change battle images load strategy to fix layout issue

--- a/resources/stat.ink/battle-thumb-list.less
+++ b/resources/stat.ink/battle-thumb-list.less
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import (reference) "../../vendor/bower/bootstrap/less/variables.less";
+@import (reference) "../../vendor/bower-asset/bootstrap/less/variables.less";
 
 /*! Copyright (C) 2015-2016 AIZAWA Hina | MIT License */
 
@@ -182,4 +182,11 @@ ul.battles {
   .thumbnail {
     margin-bottom: 5px;
   }
+}
+
+.battle-item-image {
+  background-image: none;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center center;
 }
